1.99.22
- P4A_Is_Error(), P4A_New_Line() and P4A_Space() were removed
- DB adapter (adodb) inclusion was moved to p4a_db.php thus it's easier to use p4a_db outsite a p4a application
- P4A_Field::setError() was added

1.99.21
- PEAR::Console_Getopt 1.2.2 was re-introduced to avoid installation problems
- P4A_Object::dropIntercept() method wad added
- P4A_Table::addActionCol() method was added
- P4A_Table_Col::setValue() method was added

1.99.20
- PEAR 1.5.0 base package was re-introduced to avoid installation problems

1.99.19
- a bug with P4A_Object::errorHandler() was fixed
- PEAR::MDB2 was dropped
- ADODB 494 was introduces as the new database abstraction library
- automatic sequence detection/creation on numeric/primary key was added
- P4A_AUTO_DB_SEQUENCES (default to true) constant was added to enable/disable automatic sequence detection/creation
- PEAR packages stripdown, all basic pear packages were removed cause they're always present on PHP servers
- PEAR::File and PEAR::File_SWF were removed cause they were unused
- PEAR::Date was updated to 1.4.7
- a bug with P4A_Table and long numbers formatting was fixed
- PEAR::HTML_Template_Flexy and P4A_Template_Engine were dropped
- all templates were converted to PHP templates, gaining performance
- P4A_AJAX_DEBUG should not be set to "true" anymore but should be set to the path of the debugging file
- P4A_COMPILE_DIR was removed cause unused
- P4A_DB::singleton() now returns a P4A object instead of the DB adapter, thus it will be easy in the future to port on other DB adapters

1.99.18
- .svn directories are now excluded from the automatic inclusion system
- a bug with p4a.js form2string was fixed (regarding escaped characters) (thanks to Nenad Trupka)
- Croatian traslation was added (thanks to Nenad Trupka)
- some fixes were applied to Croatian formats (thanks to Nenad Trupka)
- PHP closing tag was removed from all translation and format files

1.99.17
- PEAR was updated to 1.5.0
- phpThumb was updated to 1.7.7